--- a/client/state.html
+++ b/client/state.html
@@ -24,7 +24,7 @@
     <script src="cm/codemirror.js"></script>
     <script src="cm/css.js"></script>
     <!-- load local server version if cdn unavailable -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script><script>if (!window.jQuery) document.write('<script src="cm/diff_match_patch.js"><\/script>');</script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script><script>if (!window.jQuery) document.write('<script src="cm/diff_match_patch.js"><\/script>');</script> -->
 
     <!-- <script src="cm/htmlmixed.js"></script> -->
     <!-- <script src="cm/xml.js"></script> -->
@@ -42,11 +42,11 @@
     <!-- style -->
     <link rel=stylesheet href="css/jquery-ui.css">
 
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
 
     <link rel=stylesheet href="css/cards.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/jquery-ui.js"></script>
 
     <!-- resizeable columns -->
     <link rel=stylesheet href="css/colresizeable.css">
