--- a/client/state.html
+++ b/client/state.html
@@ -131,7 +131,8 @@ rgb(199, 0, 57) --> */
                     <tr >
                         <th style="width: 40%;">Parameter</th>
                         <th style="width: 20%;">Type</th>
-                        <th style="width: 40%;">Value</th>          
+                        <th style="width: 40%;">Value</th>  
+                        <input type="text" id="dontmatter" class="cm-number" value="1" name="alsoDontmatter" size="3" />        
                     </tr>
                 </tbody>
             </table>
@@ -179,6 +180,8 @@ var state = [];
 var lines = []
 var lastLine;
 
+var dv;
+
 function log(msg){
   console.log(msg)
 }
@@ -216,6 +219,40 @@ function updateState(paramName, paramValue){
         }
     })
 }
+
+function sourceCard(stateCode) {
+    // isRightDirty = false;
+    if (value == null) return;
+    var target = document.getElementById("stateh_source");
+    target.innerHTML = "";
+    dv = CodeMirror(target, {
+        //position: "relative",
+        value: stateCode,
+        // origLeft: panes == 3 ? orig1 : null,
+        // origRight: orig1,
+        styleActiveLine: true,
+        lineNumbers: true,
+        mode: "clike",
+        //highlightDifferences: "highlight",
+        theme: 'one-dark',
+        readOnly: false,
+        //NOTE: viewportMargin, when set to 'infinity', allows for full text searching, BUT when set to a high number seems to have been the source of the sluggishness in the client app!! so now its only at 10. 
+        viewportMargin: 10,
+        revertButtons: true,
+        allowEditingOriginals: true,
+        // autoRefresh: true,
+        // showDifferences: true,
+        linewrapping: true,
+        //editing
+        undoDepth: 200,
+        //cursor settings:
+        cursorBlinkRate: 300,
+        cursorScrollMargin: 0,  
+        autofocus: true                 
+    });
+    dv.setSize("100%", 550);
+}
+
 
 // $('.param').click(function() {
 //   console.log($(this).attr('value'));
@@ -323,6 +360,10 @@ function openSocket() {
                     let pValue;
                     let start;
                     let end;
+                    let begin;
+                    let endChar;
+
+
                     Object.keys(state).forEach(function(key, value) {
                         //console.log(state[key].paramName)
                         pName;
@@ -332,6 +373,7 @@ function openSocket() {
                          pValue = state[key].paramValue;
                          begin = state[key].begin;
                          end = state[key].end;
+                         endChar = state[key].endChar;
 
 
                         //different types will require different ui elements.
@@ -437,37 +479,6 @@ setInterval(function(){
         if (!ws || ws.readyState === WebSocket.CLOSED) openSocket();
 }, 2000);
 
-function sourceCard(stateCode) {
-    // isRightDirty = false;
-    if (value == null) return;
-    var target = document.getElementById("stateh_source");
-    target.innerHTML = "";
-    dv = CodeMirror(target, {
-        //position: "relative",
-        value: stateCode,
-        // origLeft: panes == 3 ? orig1 : null,
-        // origRight: orig1,
-        styleActiveLine: true,
-        lineNumbers: true,
-        mode: "clike",
-        //highlightDifferences: "highlight",
-        theme: 'one-dark',
-        readOnly: false,
-        //NOTE: viewportMargin, when set to 'infinity', allows for full text searching, BUT when set to a high number seems to have been the source of the sluggishness in the client app!! so now its only at 10. 
-        viewportMargin: 10,
-        revertButtons: true,
-        allowEditingOriginals: true,
-        // autoRefresh: true,
-        // showDifferences: true,
-        linewrapping: true,
-        //editing
-        undoDepth: 200,
-        //cursor settings:
-        cursorBlinkRate: 300,
-        cursorScrollMargin: 0,                   
-    });
-    dv.setSize("100%", 550);
-}
 
 // write new state.h to disk and commit changes
 $(function() {
@@ -500,6 +511,89 @@ $(function() {
     });
 
 })
+
+var EventUtil = {
+
+addHandler: function(element, type, handler){
+    if (element.addEventListener){
+        element.addEventListener(type, handler, false);
+    } else if (element.attachEvent){
+        element.attachEvent("on" + type, handler);
+    } else {
+        element["on" + type] = handler;
+    }
+},
+
+removeHandler: function(element, type, handler){
+    if (element.removeEventListener){
+        element.removeEventListener(type, handler, false);
+    } else if (element.detachEvent){
+        element.detachEvent("on" + type, handler);
+    } else {
+        element["on" + type] = null;
+    }
+},
+
+getEvent: function(event) {
+    return event ? event : window.event;
+},
+
+getTarget: function(event) {
+    return event.target || event.srcElement;    
+},
+
+getWheelDelta: function(event) {
+    if (event.wheelDelta){
+        return event.wheelDelta;
+    } else {
+        return -event.detail * 40;
+    }
+},
+
+preventDefault: function(event) {
+    if (event.preventDefault){
+        event.preventDefault();
+    } else {
+        event.returnValue = false;
+    }
+}
+
+};
+
+function onWheel(event) {
+
+event = EventUtil.getEvent(event);
+var curElem = EventUtil.getTarget(event);
+var curVal = parseInt(curElem.innerHTML);
+var delta = EventUtil.getWheelDelta(event);
+
+
+
+
+if (delta > 0) {
+    curElem.innerHTML = curVal + 1;
+    console.log(dv.getDoc().getLine())
+} else{ 
+    curElem.innerHTML = curVal - 1;
+}
+
+EventUtil.preventDefault(event);
+
+}
+
+$(function() {
+
+$("#stateh_source").on("mouseover", function (){
+    $(".cm-number").hover(function(){
+    EventUtil.addHandler(document,'mousewheel', onWheel);
+    EventUtil.addHandler(document,'DOMMouseScroll', onWheel);
+},
+function(){
+    EventUtil.removeHandler(document, 'mousewheel', onWheel);
+    EventUtil.removeHandler(document, 'DOMMouseScroll', onWheel);
+});
+});
+});
 
 </script>
 
