finally got a terminal working on the windows machine

--- a/client/index.html
+++ b/client/index.html
@@ -289,9 +289,7 @@
             </form>  
         </div> 
         <div id="chatHeader" style="float: right;">Integrated Terminal
-            <div id="terminal">
-                >.
-            </div>
+            <iframe src="192.168.0.27:8081">
         </div>
     </div>
 
