--- a/client/index.html
+++ b/client/index.html
@@ -124,7 +124,7 @@
             
             <input id="server" type="text" value="ws://localhost:8080" size="40">
             
-            <!-- THEMES SELECTION-->
+            <!-- THEMES SELECTION
             <span>Select a theme: <select onchange="selectTheme()" id=themeSelect>
                 <option selected>default</option>
                 <option>3024-day</option>
@@ -182,7 +182,7 @@
                 <option>yeti</option>
                 <option>zenburn</option>
             </select>
-            </span>
+            </span> -->
         </th>
         <th>
             <button onclick="openSocket()">Open</button>
@@ -278,11 +278,9 @@
             </th>
         </tr>
 </table>
-
-<script>
-// use this to prevent cross domain request issues when requesting the terminal
-document.domain = document.domain;
+<script>document.domain = document.domain;
 </script>
+<!-- <iframe src="http://192.168.0.27:8081" width=100%>Windows Machine</iframe> -->
 <iframe src="http://localhost:8081" width=100%></iframe>
 <!-- Chat and System Logs -->
     <!-- <div class="chatFooter">
@@ -297,6 +295,7 @@ document.domain = document.domain;
             <iframe src="192.168.0.27:8081">
         </div>
     </div> -->
+
 <script>
 
 
@@ -314,15 +313,6 @@ var currentUser = 'FullName'
 var filename // the currently selected filename
 var ws_url = "ws://" + window.location.host;
 // var ws_url = 'ws://localhost:8080'
-
-function loadIframe(iframeName, url) {
-    var $iframe = $('#' + iframeName);
-    if ( $iframe.length ) {
-        $iframe.attr('src',url);    // here you can change src
-        return false;
-    }
-    return true;
-}
 
 // var col;
 // codemirror/mergeview globals:
@@ -396,11 +386,10 @@ function openStateEditor () {
 }
 
 function openTerminal () {
-  //var terminalHost = location.host.substr(0, location.host.indexOf(':')) + ':8081';
+  var terminalHost = "http://" + location.host.substr(0, location.host.indexOf(':')) + ':8081';
   // var childWindow = "";
-  window.open("http://192.168.0.27:8081")
-  window.location
-  console.log( window.location)
+  window.open(terminalHost)
+  
   // childWindow = window.open(terminalHost)
   // setTimeout(
   //   function() {
