--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,7 @@
             <button onclick="newEditor()" id="myButton">New Editor</button>
             <button onclick="openCardsEditor()" id="openCardsEditor">Cards Editor</button>
             <button onclick="openStateEditor()" id="openStateEditor">State Editor</button>
-            <button onclick="openTerminal()" id="openTerminal">Terminal (hit refresh after loading)</button>
+            <button onclick="openTerminal()" id="openTerminal">New CLI</button>
             
             <input id="server" type="text" value="ws://localhost:8080" size="40">
             
