commented out loading all the theme stylesheets to improve page load speed

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 <!-- <meta http-equiv="refresh" content="5; URL=http://192.168.1.48:8080/index_v2.html"> -->
 <!--        SOURCES         -->
 <!-- THEMES-->
-<link rel="stylesheet" href="cm/themes/3024-day.css">
+<!-- <link rel="stylesheet" href="cm/themes/3024-day.css">
 <link rel="stylesheet" href="cm/themes/3024-night.css">
 <link rel="stylesheet" href="cm/themes/abcdef.css">
 <link rel="stylesheet" href="cm/themes/ambiance.css">
@@ -57,7 +57,7 @@
 <link rel="stylesheet" href="cm/themes/yeti.css">
 <link rel="stylesheet" href="cm/themes/idea.css">
 <link rel="stylesheet" href="cm/themes/darcula.css">
-<link rel="stylesheet" href="cm/themes/zenburn.css">
+<link rel="stylesheet" href="cm/themes/zenburn.css"> -->
 
 
 <!-- CSS -->
