for a moment i was going to rewrite the server to also host a code editor that would be for all the code in the /alicenode repo, but i didnt want to risk breaking what is already working. so the new workflow will simply be to make changes locally on ones computer in alicenode, then use the client editors new terminal feature to pull the changes from origin

--- a/client/alicenode.html
+++ b/client/alicenode.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Alicenode Editor</title>
+<title>/alicenode Editor</title>
 <meta charset="utf-8"/>
 <!-- //TEMPORARY: just to aid in development workflow -->
 <!-- <meta http-equiv="refresh" content="5; URL=http://192.168.1.48:8080/index_v2.html"> -->
@@ -281,7 +281,7 @@
 <script>document.domain = document.domain;
 </script>
 <!-- <iframe src="http://192.168.0.27:8081" width=100%>Windows Machine</iframe> -->
-<iframe src="http://localhost:8081" width=100%></iframe>
+<iframe src="http://192.168.0.27:8081" width=100%></iframe>
 <!-- Chat and System Logs -->
     <!-- <div class="chatFooter">
          <div id="chatHeader">Chat and System Messages
@@ -599,7 +599,7 @@ function openSocket () {
   ws.onopen = function () {
     // log('open');
     //ws.send('client_SVG?')
-    ws.send('getCurrentBranch')
+    ws.send('AlicenodegetCurrentBranch')
 
     sessionStorage.echoServer = url
   }
@@ -655,7 +655,7 @@ function openSocket () {
             var sel = document.getElementById('chooseUser')
             // store the incoming userlist in a global
             currentUserList = JSON.parse(arg)
-            //console.log(currentUserList)
+            console.log(currentUserList)
             // compare the previous userlist with the incoming list
             // append any new names
             Object.keys(currentUserList).forEach(function (key) {
