--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <title>Alicenode Editor</title>
 <meta charset="utf-8"/>
-<!-- //TEMPORARY: just to aid in development workflow -->
-<!-- <meta http-equiv="refresh" content="5; URL=http://192.168.1.48:8080/index_v2.html"> -->
+
 <!--        SOURCES         -->
 <!-- THEMES-->
 <!-- <link rel="stylesheet" href="cm/themes/3024-day.css">
@@ -86,6 +85,7 @@
 <script src="js/jquery.color.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.graphviz.svg.js"></script>
+<script src="js/mousetrap.js"></script>
 <!-- misc -->
 <link rel="shortcut icon"><!-- fix the 'cannot find 'favicon.ico' error -->
 
@@ -455,6 +455,13 @@ function initUI () {
     if (theme) { inputTheme.value = theme; selectTheme(); }
   });
 }
+
+// dv.setOption("extraKeys", {
+//   Cmd-s: function(cm) {
+//     var spaces = Array(cm.getOption("indentUnit") + 1).join(" ");
+//     cm.replaceSelection(spaces);
+//   }
+// });
 function toggleCollapse(collapse1){
 
   collapse = !collapse
@@ -514,6 +521,12 @@ function resize (mergeView) {
   }
   mergeView.wrap.style.height = height + 'px';
 }
+
+
+Mousetrap.bind('ctrl+s', function(e) {
+  // your function here...
+  alert("it worked!")
+});
 
 // Send current content within CodeMirror's Left editor to the server (will restart simulation)
 function sendLeftCode () {
