--- a/client/state.html
+++ b/client/state.html
@@ -103,6 +103,7 @@ rgb(199, 0, 57) --> */
         <td>
             <button id="writeStateH">Save state.h</button>
             <button id="clearHighlights">Clear Highlighting</button>
+            <button id="rebuildCPP2JSON">Rebuild cpp2json</button>
 
         </td>
         <td>
@@ -119,6 +120,11 @@ rgb(199, 0, 57) --> */
                     <tr>
                         <td > 
                             <div id="stateh_source"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Notes: saving state.h also triggers a rebuild of cpp2json. This bootstraps an issue where cpp2json seems to only provide parameter names that were present at the most-recent build.
                         </td>
                     </tr>
                 
@@ -511,7 +517,10 @@ $(function() {
         var commitMsg = prompt('Please provide a comment about your changes', 'reticulating splines')
         writeStateH = {authorName, authorEmail, newState, commitMsg}
         ws.send('state.h_write?' + JSON.stringify(writeStateH))
-        console.log(writeStateH)           
+        console.log(writeStateH)
+        // tell server to rebuild cpp2json in case param names were added/removed/changed to state.h
+        ws.send("rebuildCpp2json?")
+          
     });
 });
 
@@ -528,6 +537,16 @@ $(function() {
     });
 
 })
+
+//// trigger manual rebuild of cpp2json
+$(function() {
+    $("#rebuildCPP2JSON").click( function()
+        {
+            ws.send("rebuildCpp2json?")
+    });
+
+})
+rebuildCPP2JSON
 
 var EventUtil = {
 
